@@ -1,3 +1,8 @@
+2013-05-30  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* src/qt4/debug_painter.cpp:
+	- デバッグ情報のプレイヤにもキッカブルエリアが表示されるように描画処理を追加
+
 2013-05-23  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* src/qt4/evaluator_control_panel.cpp:
